    building on other architectures.

  [ Antonio Terceiro ]
  * debci-generate-index: update packages.json atomically
  * web UI improvements:
    - remove limit of number of items to display in the search
      (Closes: #762213)
    - trigger search immediately when there is text in the search box
      (this will happen if you reload the page)

 -- Martin Pitt <mpitt@debian.org>  Wed, 24 Sep 2014 10:00:22 +0200

debci (0.9) unstable; urgency=medium

  [ Antonio Terceiro ]
  * schroot/create-testbed: update existing chroots
  * debci-generate-feeds: add description to feeds
  * Incorporate results of the Google Summer of Code 2014 project by Brandon
    Fairchild, providing uncountable improvements to the web interface.
    http://lists.alioth.debian.org/pipermail/soc-coordination/2014-August/002295.html

  [ Brandon Fairchild ]
  * web UI was improved to support multiple suites and architectures, reduce
    the dependency the UI had on Javascript, and provide more information to
    package maintainers. The documentation was also worked on to provide
    information to people interested in working on debci (specifically the web
    UI)

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 23 Aug 2014 18:10:04 -0300

debci (0.8.1) unstable; urgency=medium

  * Documentation updates
  * Fix obtaining the finish date of tests. Parsing the adt-run log started
    producing bad dates when adt-run changed to displaying only the time
    without the date. debci now uses the timestamp of when adt-run finished
    instead.
  * debci-batch: store offline mark in persistent storage to avoid going back
    online after a reboot.
  * debci-test: revert to updating only package-specific data; it turns out
    that updating global data after every package is too expensive.
  * debci-batch: update global data every 1 hour or so
  * debci-generate-index: avoid crash when regenerating data for extenal
    consumption from scratch. This process is not completely idempotent yet,